tdf#166713 Fix crash in lcl_FoldedOutlineNodeEndOfParaSplit

by handling the case of a paragraph outline level set by direct
formatting.

Change-Id: Ida0c8f91f0fb0584b39c16b3ddf2201429c6943f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/191471
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>
(cherry picked from commit fd9ae53e39f3219474461d1e8e3220d8efdfcecb)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/191482
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
(cherry picked from commit 5b9e275838ec1cd08f1c1755de545b4f7f34c7d1)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/191501
Reviewed-by: Ilmari Lauhakangas <ilmari.lauhakangas@libreoffice.org>
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>
Tested-by: Xisco Fauli <xiscofauli@libreoffice.org>