sw/source/uibase/wrtsh/wrtsh1.cxx
@@ -1396,6 +1396,10 @@ static bool lcl_FoldedOutlineNodeEndOfParaSplit(SwWrtShell *pThis)
 
             SwTextNode* pNd = pDoc->GetNodes().MakeTextNode(*pEndNd, pTextNode->GetTextColl(), true);
 
+            // if the outline level is not set in style then it is set in direct formatting
+            if (!pTextNode->GetTextColl()->GetAttrOutlineLevel())
+                pNd->SetAttrOutlineLevel(pTextNode->GetAttrOutlineLevel());
+
             (void) rOutlineNodes.Seek_Entry(pNd, &nPos);
             pThis->GotoOutline(nPos);
 
